--- a/SourceCode/C++/Makefile
+++ b/SourceCode/C++/Makefile
@@ -10,12 +10,41 @@ CC= g++
 
 #### Do the chapters #######################################################
 
-all: sorting
+all: build sorting
 
-Sorting: Mergesort MergesortOpt
+build:
+	mkdir build
 
-Mergesort: Sorting/Mergesort.o
-	$(CC) $(CFLAGS) Sorting/Mergesort.o -o Sorting/Mergesort
+clean:
+	-rm -rf build
+	mkdir build
+
+Sorting: Inssort Mergesort MergesortOpt
+
+Inssort: build/InssortTest/success
+
+build/InssortTest/success: Sorting/Insertionsort.cpp build/InssortTest/Insertionsort.o
+	@echo "Inssort Test"
+	-@rm -rf build/InssortTest
+	@mkdir build/InssortTest
+	@cp Sorting/Insertionsort.cpp build/InssortTest
+	$(CC) $(CFLAGS) build/InssortTest/Insertionsort.o -o build/InssortTest/Insertionsort.o
+	build/InssortTest/Insertionsort
+
+Mergesort: build/Mergesort/success
+
+build/Mergesort/success: Sorting/Mergesort.cpp Sorting/sortmain.cpp book.h compare.h
+	@echo "Mergesort Test"
+	-@rm -rf build/Mergesort
+	@mkdir build/Mergesort
+	@cp Sorting/Mergesort.cpp build/Mergesort
+	@cp Sorting/sortmain.cpp build/Mergesort
+	@cp book.h build/Mergesort
+	@cp compare.h build/Mergesort
+	cd build/Mergesort; \
+	$(CC) -c $(CFLAGS) $(CPPFLAGS) -o Mergesort.o Mergesort.cpp; \
+	$(CC) $(CFLAGS) Mergesort.o -o Mergesort; \
+	./Mergesort 1000 1000
 
 MergesortOpt: Sorting/MergesortOpt.o
 	$(CC) $(CFLAGS) Sorting/MergesortOpt.o -o Sorting/MergesortOpt
