Array tree now can display arrays intead of traditional nodes. finizled the tree indexing exercise

--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,6 @@ lib/khan-exercises/exercises/khan-site.html
 
 # Minified JS and CSS files
 lib/*-min.*
+
+# File used by webstorm to store project settings.
+.idea
