Update to JSAV v0.7.0-192; reorganize Processing code for sorting

--- a/SourceCode/C++/Makefile
+++ b/SourceCode/C++/Makefile
@@ -19,7 +19,7 @@ clean:
 	-rm -rf build
 	mkdir build
 
-Sorting: Inssort Mergesort MergesortOpt
+sorting: Inssort Mergesort MergesortOpt
 
 Inssort: build/InssortTest/success
 
@@ -33,18 +33,30 @@ build/InssortTest/success: Sorting/Insertionsort.cpp build/InssortTest/Insertion
 
 Mergesort: build/Mergesort/success
 
-build/Mergesort/success: Sorting/Mergesort.cpp Sorting/sortmain.cpp book.h compare.h
+build/Mergesort/success: Sorting/Mergesort.cpp Sorting/sortmain.cpp Utils/book.h Utils/compare.h
 	@echo "Mergesort Test"
 	-@rm -rf build/Mergesort
 	@mkdir build/Mergesort
 	@cp Sorting/Mergesort.cpp build/Mergesort
 	@cp Sorting/sortmain.cpp build/Mergesort
-	@cp book.h build/Mergesort
-	@cp compare.h build/Mergesort
+	@cp Utils/book.h build/Mergesort
+	@cp Utils/compare.h build/Mergesort
 	cd build/Mergesort; \
 	$(CC) -c $(CFLAGS) $(CPPFLAGS) -o Mergesort.o Mergesort.cpp; \
 	$(CC) $(CFLAGS) Mergesort.o -o Mergesort; \
 	./Mergesort 1000 1000
 
-MergesortOpt: Sorting/MergesortOpt.o
-	$(CC) $(CFLAGS) Sorting/MergesortOpt.o -o Sorting/MergesortOpt
+MergesortOpt: build/MergesortOpt/success
+
+build/MergesortOpt/success: Sorting/MergesortOpt.cpp Sorting/sortmain.cpp Utils/book.h Utils/compare.h
+	@echo "MergesortOpt Test"
+	-@rm -rf build/MergesortOpt
+	@mkdir build/MergesortOpt
+	@cp Sorting/MergesortOpt.cpp build/MergesortOpt
+	@cp Sorting/sortmain.cpp build/MergesortOpt
+	@cp Utils/book.h build/MergesortOpt
+	@cp Utils/compare.h build/MergesortOpt
+	cd build/MergesortOpt; \
+	$(CC) -c $(CFLAGS) $(CPPFLAGS) -o MergesortOpt.o MergesortOpt.cpp; \
+	$(CC) $(CFLAGS) MergesortOpt.o -o MergesortOpt; \
+	./MergesortOpt 1000 1000
