Add KVpair support for Insertionsort in C++

--- a/SourceCode/C++/Makefile
+++ b/SourceCode/C++/Makefile
@@ -23,13 +23,20 @@ sorting: Inssort Mergesort MergesortOpt
 
 Inssort: build/InssortTest/success
 
-build/InssortTest/success: Sorting/Insertionsort.cpp build/InssortTest/Insertionsort.o
+build/InssortTest/success: Sorting/Insertionsort.cpp Sorting/SortTest.cpp Utils/Checkorder.cpp Utils/compare.h Utils/utils.h Utils/KVpair.cpp
 	@echo "Inssort Test"
 	-@rm -rf build/InssortTest
 	@mkdir build/InssortTest
 	@cp Sorting/Insertionsort.cpp build/InssortTest
-	$(CC) $(CFLAGS) build/InssortTest/Insertionsort.o -o build/InssortTest/Insertionsort.o
-	build/InssortTest/Insertionsort
+	@cp Sorting/SortTest.cpp build/InssortTest
+	@cp Utils/Checkorder.cpp build/InssortTest
+	@cp Utils/KVpair.cpp build/InssortTest
+	@cp Utils/compare.h build/InssortTest
+	@cp Utils/utils.h build/InssortTest
+	cd build/InssortTest; \
+	$(CC) -c $(CFLAGS) $(CPPFLAGS) -o Insertionsort.o Insertionsort.cpp; \
+	$(CC) $(CFLAGS) Insertionsort.o -o Insertionsort; \
+	./Insertionsort 1000 1000
 
 Mergesort: build/Mergesort/success
 
